--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="../dist/styles.css" />
+    <link rel="stylesheet" href="/src/styles.css" />
   </head>
 
   <body>
